edited mistakes and bugs